--- a/dublin.html
+++ b/dublin.html
@@ -99,6 +99,7 @@
           <img src="./images/dublin/dublin-23.jpg" alt="dublin city" />
 
           <img src="./images/dublin/dublin-24.jpg" alt="dublin city" />
+          <img src="./images/dublin/dublin-28.jpg" alt="dublin city" />
 
 
 
