--- a/wildlife.html
+++ b/wildlife.html
@@ -67,6 +67,7 @@
           <img src="./images/wildlife/wildlife-13.jpg" alt="wildlife" />
           <img src="./images/wildlife/wildlife-11.jpg" alt="wildlife" />
           <img src="./images/wildlife/wildlife-17.jpg" alt="wildlife" />
+          <img src="./images/wildlife/wildlife-20.jpg" alt="wildlife" />
 
 
 
