--- a/javascript tests.html
+++ b/javascript tests.html
@@ -13,8 +13,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
-    <title>Travel - David Soanes Photography</title>
-    <meta name="description" content="Travel photography gallery." />
+    <title>Landscapes - David Soanes Photography</title>
+    <meta name="description" content="Landscape photography gallery." />
     <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
 
     <script src="https://use.fontawesome.com/af14fb55aa.js"></script>
@@ -22,7 +22,9 @@
     <link rel="icon" type="image/png" href="images/favicon.ico">
 
 </head>
-  <body>   
+  <body>
+  
+
       <header class="header">
         <input class="menu-btn" type="checkbox" id="menu-btn" />
         <label class="menu-icon" for="menu-btn">
@@ -51,39 +53,25 @@
     <section>
       <div class="gallery">
         <div class="container">
-          <img src="./images/travel/travel-10.jpg" alt="travel" />
-          <img src="./images/travel/travel-13.jpg" alt="travel" />
-          <img src="./images/travel/travel-22.jpg" alt="travel" />
+          <img src="./images/landscapes/landscapes-25.jpg" alt="landscape" />
 
-          <img src="./images/travel/travel-14.jpg" alt="travel" />
+          <img src="./images/landscapes/landscapes-9.jpg" alt="landscape" />
 
-          <img src="./images/travel/travel-3.jpg" alt="travel" />
-          <img src="./images/travel/travel-4.jpg" alt="travel" />
-          <img src="./images/travel/travel-5.jpg" alt="travel" />
-          <img src="./images/travel/travel-18.jpg" alt="travel" />
-          <img src="./images/travel/travel-24.jpg" alt="travel" />
+          <img src="./images/landscapes/landscapes-1.jpg" alt="landscape" />
 
-          <img src="./images/travel/travel-29.jpg" alt="travel" />
+          <img src="./images/landscapes/landscapes-2.jpg" alt="landscape" />
+          <img src="./images/landscapes/landscapes-3.jpg" alt="landscape" />
+          <img src="./images/landscapes/landscapes-5.jpg" alt="landscape" />
+          <img src="./images/landscapes/landscapes-8.jpg" alt="landscape" />
 
-          <img src="./images/travel/travel-7.jpg" alt="travel" />
-          <img src="./images/travel/travel-8.jpg" alt="travel" />
-          <img src="./images/travel/travel-9.jpg" alt="travel" />
-          <img src="./images/travel/travel-12.jpg" alt="travel" />
+          <img src="./images/landscapes/landscapes-16.jpg" alt="landscape" />
+          <img src="./images/landscapes/landscapes-20.jpg" alt="landscape" />
+          <img src="./images/landscapes/landscapes-22.jpg" alt="landscape" />
+          <img src="./images/landscapes/landscapes-23.jpg" alt="landscape" />
+          <img src="./images/landscapes/landscapes-21.jpg" alt="landscape" />
 
-          <img src="./images/travel/travel-17.jpg" alt="travel" />
-          <img src="./images/travel/travel-19.jpg" alt="travel" />
-          <img src="./images/travel/travel-21.jpg" alt="travel" />
-
-
-
-
-
-          <img src="./images/travel/travel-27.jpg" alt="travel" />
-          <img src="./images/travel/travel-26.jpg" alt="travel" />
-
-
-
-
+          <img src="./images/landscapes/landscapes-24.jpg" alt="landscape" />
+          <img src="./images/landscapes/landscapes-26.jpg" alt="landscape" />
 
         </div>
       </div>
@@ -118,6 +106,8 @@
 
     <!-- FontAwesome -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
+
+
 
 
 <script>
