--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <link rel="icon" type="image/png" href="images/favicon.ico">
 
 </head>
-  <body>    
+  <body>
 <div class = "container">
 
       <header class="header">
@@ -54,13 +54,34 @@
 
     <section>
       <div class="container">
-        <div class="banner">
-          <img src="./images/homepage-banner.jpg" alt="banner image" />
-        </div>
+        <section id="desktop-banner">
+          <article class="desktop-banner">
+              <img src="./images/homepage-banner.jpg" />
+          </article>
+
+      </section>
       </div>
     </section>
 
+    <section>
+      <div class="container">
+        <section id="mobile-banner">
+          <article class="mobile-banner">
+              <img src="./images/homepage-banner-mobile-1.jpg" />
+          </article>
+
+      </section>
+      </div>
+    </section>
+
+
+
+
+
+
+
     <hr>
+    <div class="footer-container">
     <footer id="footer">
       <div class="container">
         <div class="copyright">
@@ -86,5 +107,55 @@
         </div>
       </div>
     </footer>
+  </div>
+
+
+
+<script>
+var images = [];
+images[2] = "./images/homepage-banner.jpg";
+images[0] = "./images/homepage-banner-2.jpg";
+images[1] = "./images/homepage-banner-3.jpg";
+
+
+
+
+var i = 0;
+setInterval(fadeDivs, 6000);
+
+function fadeDivs() {
+    i = i < images.length ? i : 0;
+    console.log(i)
+    $('.desktop-banner img').fadeOut(700, function(){
+        $(this).attr('src', images[i]).fadeIn(700);
+        i++;
+
+    })
+
+}
+</script>
+
+<script>
+  var imagesmob = [];
+imagesmob[2] = "./images/homepage-banner-mobile-1.jpg";
+imagesmob[0] = "./images/homepage-banner-mobile-2.jpg";
+imagesmob[1] = "./images/homepage-banner-mobile-3.jpg";
+
+var m = 0;
+setInterval(fadeDivs, 6000);
+
+function fadeDivs() {
+    m = m < imagesmob.length ? m : 0;
+    console.log(m)
+    $('.mobile-banner img').fadeOut(700, function(){
+        $(this).attr('src', imagesmob[m]).fadeIn(700);
+        m++;
+
+    })
+
+}
+</script>
+
+
   </body>
 </html>
