--- a/about.html
+++ b/about.html
@@ -21,26 +21,26 @@
 
 </head>
 <header class="header">
-        <input class="menu-btn" type="checkbox" id="menu-btn" />
-        <label class="menu-icon" for="menu-btn">
-          <span class="navicon"></span>
-        </label>
-        <div class="logo"><a href="index.html" class="logo"><img src="./images/logo.png" /></a></div>
-        <ul  class="menu">    
-          <li><a href="barcelona.html">Barcelona</a></li>
-          <!--<li><a href="dublin.html">Dublin</a></li> -->
-          <li><a href="travel.html">Travel</a></li>
-          <li><a href="events.html">Events</a></li> 
-         <!-- <li><a href="reflections.html">Reflections</a></li> -->
-          <li><a href="products.html">Products</a></li>
-          <li><a href="architecture.html">Architecture</a></li>
-          <li><a href="landscapes.html">Landscapes</a></li>
-          <li><a href="dereliction.html">Dereliction</a></li>
-          <li><a href="wildlife.html">Wildlife</a></li>
-          <li><a href="published.html">Published</a></li>
-          <li><a href="about.html">About</a></li>
-        </ul>
-      </header>
+  <input class="menu-btn" type="checkbox" id="menu-btn" />
+  <label class="menu-icon" for="menu-btn">
+    <span class="navicon"></span>
+  </label>
+  <div class="logo"><a href="index.html" class="logo"><img src="./images/logo.png" /></a></div>
+  <ul  class="menu">    
+    <li><a href="barcelona.html">Barcelona</a></li>
+    <li><a href="dublin.html">Dublin</a></li> 
+    <li><a href="travel.html">Travel</a></li>
+    <li><a href="events.html">Events</a></li> 
+   <!-- <li><a href="reflections.html">Reflections</a></li> -->
+    <li><a href="products.html">Products</a></li>
+    <li><a href="architecture.html">Architecture</a></li>
+    <li><a href="landscapes.html">Landscapes</a></li>
+    <li><a href="dereliction.html">Dereliction</a></li>
+    <li><a href="wildlife.html">Wildlife</a></li>
+    <li><a href="published.html">Published</a></li>
+    <li><a href="about.html">About</a></li>
+  </ul>
+</header>
 
     </div>
 
