--- a/about.html
+++ b/about.html
@@ -97,8 +97,8 @@
         <a href="https://www.shutterstock.com/g/somethingirish">
         <img class="" src="images/shutterstock.png" alt="Shutterstock" width="160" height="auto"/></a>
 
-        <a href="https://stock.adobe.com/contributor/204619233/David%20Soanes">
-          <img class="" src="images/adobe-stock.jpg" alt="Adobe stock" width="140" height="auto"/></a>
+       <!--<a href="https://stock.adobe.com/contributor/204619233/David%20Soanes">
+          <img class="" src="images/adobe-stock.jpg" alt="Adobe stock" width="140" height="auto"/></a>-->
 
 
 
