--- a/about.html
+++ b/about.html
@@ -82,6 +82,7 @@
         Camara Education, An Taisce &#8211; The National Trust for Ireland,
         Brambles Café, Empire Donuts, Dubliner Magazine, The Gathering Ireland.
       </p>-->
+      <!--
       <div id="stock-links">
       <p>
         <a
@@ -97,8 +98,8 @@
         <a href="https://www.shutterstock.com/g/somethingirish">
         <img class="" src="images/shutterstock.png" alt="Shutterstock" width="160" height="auto"/></a>
 
-       <!--<a href="https://stock.adobe.com/contributor/204619233/David%20Soanes">
-          <img class="" src="images/adobe-stock.jpg" alt="Adobe stock" width="140" height="auto"/></a>-->
+       <a href="https://stock.adobe.com/contributor/204619233/David%20Soanes">
+          <img class="" src="images/adobe-stock.jpg" alt="Adobe stock" width="140" height="auto"/></a>
 
 
             <a href="https://www.pond5.com/artist/david_soanes#1/2063">
@@ -107,7 +108,7 @@
               <a href="https://www.alamy.com/search/imageresults.aspx?pseudoid=%7b29392EC9-A431-4F1C-9335-4BE1DD5C04B3%7d&name=David%2bSoanes&st=11&mode=0&comp=1">
                 <img class="" src="images/alamy.png" alt="Alamy" width="68" height="auto"/></a>
       </p>
-    </div>
+    </div>-->
     </section>
     <hr>
     <footer id="footer">
