--- a/images/test/Ronda Tourism Website/andalucia-gallery.html
+++ b/images/test/Ronda Tourism Website/andalucia-gallery.html
@@ -1,12 +1,12 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="../css/stylesheet.css">
-        <link rel="stylesheet" href="../css/normalize.css">
-        <link rel="stylesheet" href="../css/layout.css">
-        <link rel="stylesheet" href="../css/lightbox.min.css">
-        <link rel="stylesheet" href="../https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link rel="icon" type="image/png" href="../images/icon.png">
+        <link rel="stylesheet" href="css/stylesheet.css">
+        <link rel="stylesheet" href="css/normalize.css">
+        <link rel="stylesheet" href="css/layout.css">
+        <link rel="stylesheet" href="css/lightbox.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="icon" type="image/png" href="images/icon.png">
         <script src="js/lightbox-plus-jquery.min.js"></script>
         <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
         <script type="text/javascript" src="js/jquery.mixitup.min.js"></script>
@@ -27,45 +27,51 @@
    <!-- <a href="index.html" class="logo1">Because</a>-->
    <a href="index.html" class="logo"><!--<img src="./images/logo.jpg">-->Discover Ronda</a>
 
-        <ul class="menu">
+    <ul class="menu">
+        <div class="dropdown">
+            <button class="dropbtn"><li><a>About Ronda</a></li></button>
+            <div class="dropdown-content">
+              <a href="history.html">History</a>
+              <a href="ronda-today.html">Ronda Today</a>
+              <a href="famous-people.html">Famous People</a>
+              <a href="regional-food.html">Regional Food</a>
+            </div>
+          </div> 
           <div class="dropdown">
-              <button class="dropbtn"><li><a>About Ronda</a></li></button>
-              <div class="dropdown-content">
-                <a href="history.html">History</a>
-                <a href="ronda-today.html">Ronda Today</a>
-                <a href="famous-people.html">Famous People</a>
-                <a href="regional-food.html">Regional Food</a>
-              </div>
-            </div> 
-            <div class="dropdown">
-              <button class="dropbtn"><li><a>See & Do</a></li></button>
-              <div class="dropdown-content">
-                <a href="sightseeing.html">Sightseeing</a>
-                <a href="culture.html">Culture/Museums</a>
-                <a href="hiking.html">Nature/Hiking</a>
-              </div>
+            <button class="dropbtn"><li><a>See & Do</a></li></button>
+            <div class="dropdown-content">
+              <a href="sightseeing.html">Sightseeing</a>
+              <a href="culture.html">Culture/Museums</a>
+              <a href="hiking.html">Nature/Hiking</a>
             </div>
+          </div>
+        <div class="dropdown">
+            <button class="dropbtn"><li><a>Image Gallery</a></li></button>
+            <div class="dropdown-content">
+              <a href="ronda-gallery.html">Ronda</a>
+              <a href="serrania-gallery.html">Serrania</a>
+              <a href="andalucia-gallery.html">Andalucía</a>
+            </div>
+          </div>
+        <li><a href="plan-your-trip.html">Plan Your Trip</a></li>
           <div class="dropdown">
-              <button class="dropbtn"><li><a>Image Gallery</a></li></button>
-              <div class="dropdown-content">
-                <a href="ronda-gallery.html">Ronda</a>
-                <a href="serrania-gallery.html">Serrania</a>
-                <a href="andalucia-gallery.html">Andalucía</a>
-              </div>
+            <button class="dropbtn"><li><a>About Us</a></li></button>
+            <div class="dropdown-content">
+             <!--<a href="sightseeing.html">Why We Made Discover Ronda</a>-->
+              <a href="who-we-are.html">Who We Are</a>
+              <a href="support-us.html">Support Us</a>
             </div>
-          <li><a href="plan-your-trip.html">Plan Your Trip</a></li>
-            <div class="dropdown">
-              <button class="dropbtn"><li><a href="contact-us.html">Contact Us</a></li></button>
-              <div class="dropdown-content">
-                <a href="sightseeing.html">Why we created</a>
-                <a href="#">Who we Are</a>
-                <a href="#">Support Us</a>
-              </div>
-            </div>
-      </ul>
-    </header>
-  </div>
+          </div>
+    </ul>
 
+    <div class="instagram">
+    <a href="https://www.instagram.com/discover.ronda/" target="_blank" i class="fa fa-instagram " aria-hidden="true"></a>
+    </div>
+    <div class="language">
+        <a href="es/index.html" target="" i class="" aria-hidden="true"><img src="images/spanish-language.png" width="25rem"></a>
+        </div>
+  </header>
+</div>
 
     <div class="portfolio-container">
 
