--- a/images/test/Ronda Tourism Website/sightseeing.html
+++ b/images/test/Ronda Tourism Website/sightseeing.html
@@ -25,38 +25,53 @@
     <input class="menu-btn" type="checkbox" id="menu-btn" />
     <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
    <!-- <a href="index.html" class="logo1">Because</a>-->
-   <a href="index.html" class="logo"><img src="./images/logo.jpg"></a>
+   <a href="index.html" class="logo"><!--<img src="./images/logo.jpg">-->Discover Ronda</a>
 
     <ul class="menu">
         <div class="dropdown">
-            <button class="dropbtn"><li><a href="blog-main.html">About Ronda</a></li></button>
+            <button class="dropbtn"><li><a>About Ronda</a></li></button>
             <div class="dropdown-content">
-              <a href="#">History</a>
-              <a href="#">Ronda Today</a>
-              <a href="#">Famous People</a>
-              <a href="#">Regional Cuisine</a>
-
+              <a href="history.html">History</a>
+              <a href="ronda-today.html">Ronda Today</a>
+              <a href="famous-people.html">Famous People</a>
+              <a href="regional-food.html">Regional Food</a>
             </div>
-          </div>        <div class="dropdown">
-            <button class="dropbtn"><li><a href="blog-main.html">See & Do</a></li></button>
+          </div> 
+          <div class="dropdown">
+            <button class="dropbtn"><li><a>See & Do</a></li></button>
             <div class="dropdown-content">
               <a href="sightseeing.html">Sightseeing</a>
-              <a href="#">Culture/Museums</a>
-              <a href="#">Nature/Hiking</a>
+              <a href="culture.html">Culture/Museums</a>
+              <a href="hiking.html">Nature/Hiking</a>
             </div>
           </div>
-        <li><a href="ronda.html">Gallery</a></li>
-        <li><a href="services-i-offer.html">Plan Your Trip</a></li>
-        <li><a href="contact-us.html">Contact Us</a></li>
-
-
+        <div class="dropdown">
+            <button class="dropbtn"><li><a>Image Gallery</a></li></button>
+            <div class="dropdown-content">
+              <a href="ronda-gallery.html">Ronda</a>
+              <a href="serrania-gallery.html">Serrania</a>
+              <a href="andalucia-gallery.html">Andalucía</a>
+            </div>
+          </div>
+        <li><a href="plan-your-trip.html">Plan Your Trip</a></li>
+          <div class="dropdown">
+            <button class="dropbtn"><li><a>About Us</a></li></button>
+            <div class="dropdown-content">
+             <!--<a href="sightseeing.html">Why We Made Discover Ronda</a>-->
+              <a href="who-we-are.html">Who We Are</a>
+              <a href="support-us.html">Support Us</a>
+            </div>
+          </div>
     </ul>
+
     <div class="instagram">
     <a href="https://www.instagram.com/discover.ronda/" target="_blank" i class="fa fa-instagram " aria-hidden="true"></a>
     </div>
+    <div class="language">
+        <a href="es/index.html" target="" i class="" aria-hidden="true"><img src="images/spanish-language.png" width="25rem"></a>
+        </div>
   </header>
 </div>
-
 
 <div class = "container">
     <section id = "boxes">
