--- a/images/test/Ronda Tourism Website/index.html
+++ b/images/test/Ronda Tourism Website/index.html
@@ -68,7 +68,7 @@
     <a href="https://www.instagram.com/discover.ronda/" target="_blank" i class="fa fa-instagram " aria-hidden="true"></a>
     </div>
     <div class="language">
-        <a href="es/index.html" target="" i class="" aria-hidden="true"><img src="../images/spanish-language.png" width="25rem"></a>
+        <a href="es/index.html" target="" i class="" aria-hidden="true"><img src="images/spanish-language.png" width="25rem"></a>
         </div>
   </header>
 </div>
@@ -78,8 +78,8 @@
         <div class = "container">
             <div class = "box">
                 <div class = "image">
-                    <img id = "desktop-banner" src="./images/homepage-banner.jpg">
-                    <img id = "mobile-banner" src="../images/homepage-banner-mobile.jpg">
+                    <img id = "desktop-banner" src="images/homepage-banner.jpg">
+                    <img id = "mobile-banner" src="images/homepage-banner-mobile.jpg">
                 </div>
             </div>
         </div>
