--- a/images/test/Ronda Tourism Website/ronda-gallery.html
+++ b/images/test/Ronda Tourism Website/ronda-gallery.html
@@ -1,12 +1,12 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="../css/stylesheet.css">
-        <link rel="stylesheet" href="../css/normalize.css">
-        <link rel="stylesheet" href="../css/layout.css">
-        <link rel="stylesheet" href="../css/lightbox.min.css">
-        <link rel="stylesheet" href="../https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link rel="icon" type="image/png" href="../images/icon.png">
+        <link rel="stylesheet" href="css/stylesheet.css">
+        <link rel="stylesheet" href="css/normalize.css">
+        <link rel="stylesheet" href="css/layout.css">
+        <link rel="stylesheet" href="css/lightbox.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="icon" type="image/png" href="images/icon.png">
         <script src="js/lightbox-plus-jquery.min.js"></script>
         <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
         <script type="text/javascript" src="js/jquery.mixitup.min.js"></script>
@@ -24,21 +24,21 @@
 <header class="header">
     <input class="menu-btn" type="checkbox" id="menu-btn" />
     <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
-   <!-- <a href="index.html" class="logo1">Because</a>-->
-   <a href="index.html" class="logo"><!--<img src="./images/logo.jpg">-->Discover Ronda</a>
+   <a href="index.html" class="logo"><img src="./images/logo.jpg"></a>
 
         <ul class="menu">
           <div class="dropdown">
-              <button class="dropbtn"><li><a>About Ronda</a></li></button>
+              <div class="dropbtn"><li><a>About Ronda</a></li>
+              </div>
               <div class="dropdown-content">
                 <a href="history.html">History</a>
-                <a href="ronda-today.html">Ronda Today</a>
+               <a href="ronda-today.html">Ronda Today</a>
                 <a href="famous-people.html">Famous People</a>
                 <a href="regional-food.html">Regional Food</a>
               </div>
             </div> 
             <div class="dropdown">
-              <button class="dropbtn"><li><a>See & Do</a></li></button>
+              <div class="dropbtn"><li><a>See & Do</a></li></div>
               <div class="dropdown-content">
                 <a href="sightseeing.html">Sightseeing</a>
                 <a href="culture.html">Culture/Museums</a>
@@ -63,9 +63,14 @@
               </div>
             </div>
       </ul>
-    </header>
-  </div>
-
+      <div class="instagram">
+        <a href="https://www.instagram.com/discover.ronda/" target="_blank" i class="fa fa-instagram " aria-hidden="true"></a>
+        </div>
+        <div class="language">
+            <a href="es/index.html" target="" i class="" aria-hidden="true"><img src="images/spanish-language.png" width="25rem"></a>
+            </div>
+      </header>
+    </div>
 
   <div class="portfolio-container">
 
@@ -287,6 +292,7 @@
       -->
       </div>
     </div>
+
 
     <script>
       $(function () {
