--- a/images/test/Ronda Tourism Website/index-old.html
+++ b/images/test/Ronda Tourism Website/index-old.html
@@ -24,21 +24,21 @@
 <header class="header">
     <input class="menu-btn" type="checkbox" id="menu-btn" />
     <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
+   <!-- <a href="index.html" class="logo1">Because</a>-->
    <a href="index.html" class="logo"><!--<img src="./images/logo.jpg">-->Discover Ronda</a>
+
     <ul class="menu">
         <div class="dropdown">
-            <div class="dropbtn"><li onclick="toggleMenu()"><a>About Ronda<span class="mobile-drop-icon"> ▾</span></a></li></div>
-            <div class="dropdown-content"> 
-                <ul id="menu-box" style="display: block">
+            <button class="dropbtn"><li><a>About Ronda</a></li></button>
+            <div class="dropdown-content">
               <a href="history.html">History</a>
               <a href="ronda-today.html">Ronda Today</a>
               <a href="famous-people.html">Famous People</a>
               <a href="regional-food.html">Regional Food</a>
-              </ul>
             </div>
           </div> 
           <div class="dropdown">
-            <div class="dropbtn"><li onclick="toggleMenu()"><a>See & Do<span class="mobile-drop-icon"> ▾</span></a></li></div>
+            <button class="dropbtn"><li><a>See & Do</a></li></button>
             <div class="dropdown-content">
               <a href="sightseeing.html">Sightseeing</a>
               <a href="culture.html">Culture/Museums</a>
@@ -46,34 +46,27 @@
             </div>
           </div>
         <div class="dropdown">
-            <div class="dropbtn"><li onclick="toggleMenu()"><a>Image Gallery<span class="mobile-drop-icon"> ▾</span></a></li></div>    
+            <button class="dropbtn"><li><a>Image Gallery</a></li></button>
             <div class="dropdown-content">
               <a href="ronda-gallery.html">Ronda</a>
               <a href="serrania-gallery.html">Serrania</a>
               <a href="andalucia-gallery.html">Andalucía</a>
             </div>
           </div>
+        <li><a href="plan-your-trip.html">Plan Your Trip</a></li>
           <div class="dropdown">
-            <div class="dropbtn"><li><a href="plan-your-trip.html">Plan Your Trip</a></li></div>
-          </div>
-          <div class="dropdown">
-            <div class="dropbtn"><li onclick="toggleMenu()"><a>About Us<span class="mobile-drop-icon"> ▾</div></a></li></button>
+            <button class="dropbtn"><li><a>About Us</a></li></button>
             <div class="dropdown-content">
              <!--<a href="sightseeing.html">Why We Made Discover Ronda</a>-->
               <a href="who-we-are.html">Who We Are</a>
               <a href="support-us.html">Support Us</a>
             </div>
           </div>
-          <div class="instagram">
-            <a href="https://www.instagram.com/discover.ronda/" target="_blank" i class="fa fa-instagram " aria-hidden="true"></a>
-            </div>
     </ul>
 
-
-
-
-
-
+    <div class="instagram">
+    <a href="https://www.instagram.com/discover.ronda/" target="_blank" i class="fa fa-instagram " aria-hidden="true"></a>
+    </div>
     <div class="language">
         <a href="es/index.html" target="" i class="" aria-hidden="true"><img src="images/spanish-language.png" width="25rem"></a>
         </div>
@@ -91,7 +84,6 @@
             </div>
         </div>
     </section>
-
     <div class = "container">
         <div id = "blog-text-box">
             <h3>Top Picks</h3>
