--- a/images/test/Ronda Tourism Website/index.html
+++ b/images/test/Ronda Tourism Website/index.html
@@ -17,7 +17,20 @@
         <title>Discover Ronda</title>
         <meta name="description" content="Discover Ronda - A place to discover Ronda.">
     </head>
+<script>
+     if (screen.width <= 1024) {
+  function toggleMenu() {
+var menuBox = document.getElementById('menu-box');    
+if(menuBox.style.display == "block") { // if is menuBox displayed, hide it
+menuBox.style.display = "none";
+}
+else { // if is menuBox hidden, display it
+menuBox.style.display = "block";
+}
+}
+}
 
+</script>
         <body>
 <!--new header-->
 <div class = "container">
