--- a/images/test/Ronda Tourism Website/best-viewpoints-in-ronda.html
+++ b/images/test/Ronda Tourism Website/best-viewpoints-in-ronda.html
@@ -75,10 +75,9 @@
 
   
 
-
-        <div class="banner-image">
+<section id = "blog-banner">
           <img src="./images/best-viewpoints-banner.png" />
-        </div>
+</section>
 
 
 
@@ -195,11 +194,12 @@
     </section>
 
 
-    <section id="image-1-box"><br><br>
+    <section id="map-embed">
       <p>Map of must-stop viewpoints in Ronda
       </p>
-      <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1_0bm0xJLNQOVOpkDZQxSuM_wm_eVKzbf" width="640" height="480"></iframe>
+      <iframe class = "map-frame" src="https://www.google.com/maps/d/u/0/embed?mid=1_0bm0xJLNQOVOpkDZQxSuM_wm_eVKzbf" width="90%" height="400px"></iframe>
     </section>
+    
 
     <div id = "footer">
       <div id="footer-text">
