--- a/images/test/Ronda Tourism Website/index.html
+++ b/images/test/Ronda Tourism Website/index.html
@@ -2,9 +2,8 @@
     <head>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="css/stylesheet.css">
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/layout.css">
-        <link rel="stylesheet" href="css/lightbox.min.css">
+  <!--    <link rel="stylesheet" href="css/layout.css">
+        <link rel="stylesheet" href="css/lightbox.min.css">-->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="icon" type="image/png" href="images/icon.png">
         <script src="js/lightbox-plus-jquery.min.js"></script>
@@ -16,78 +15,74 @@
 
         <title>Discover Ronda</title>
         <meta name="description" content="Discover Ronda - A place to discover Ronda.">
-    </head>
-<script>
-     if (screen.width <= 1024) {
-  function toggleMenu() {
-var menuBox = document.getElementById('menu-box');    
-if(menuBox.style.display == "block") { // if is menuBox displayed, hide it
-menuBox.style.display = "none";
-}
-else { // if is menuBox hidden, display it
-menuBox.style.display = "block";
-}
-}
-}
+  </head>
 
-</script>
-        <body>
+ <!--  <script>
+        if (screen.width <= 1024)
+
+        function toggleMenu() {
+  var x = document.getElementById("menu-dropdown-submenu");
+  if (x.style.display === "block") {
+    x.style.display = "none";
+  } else {
+    x.style.display = "block";
+  }
+}
+   </script>-->
+
 <!--new header-->
+
 <div class = "container">
-<header class="header">
-    <input class="menu-btn" type="checkbox" id="menu-btn" />
-    <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
-   <a href="index.html" class="logo"><!--<img src="./images/logo.jpg">-->Discover Ronda</a>
-    <ul class="menu">
-        <div class="dropdown">
-            <div class="dropbtn"><li onclick="toggleMenu()"><a>About Ronda<span class="mobile-drop-icon"> ▾</span></a></li></div>
-            <div class="dropdown-content"> 
-                <ul id="menu-box" style="display: block">
-              <a href="history.html">History</a>
-              <a href="ronda-today.html">Ronda Today</a>
-              <a href="famous-people.html">Famous People</a>
-              <a href="regional-food.html">Regional Food</a>
-              </ul>
+    <header class="header">
+      <input class="menu-btn" type="checkbox" id="menu-btn" />
+      <label class="menu-icon" for="menu-btn">
+        <span class="navicon"></span>
+      </label>
+      <!--<a href="index.html" class="logo"><img src="./images/logo.jpg">Discover Ronda</a>-->
+      <ul class="menu"> 
+        <div class="menu-dropdown">
+            <div>
+            <li><a>About Ronda<span class="mobile-drop-icon"> ▾</span></a></li>
+            <div  id="menu-dropdown-submenu">  
+                <a href="history.html">History</a>
+                <a href="ronda-today.html">Ronda Today</a>
+                <a href="famous-people.html">Famous People</a>
+                <a href="regional-food.html">Regional Food</a>
             </div>
-          </div> 
-          <div class="dropdown">
-            <div class="dropbtn"><li onclick="toggleMenu()"><a>See & Do<span class="mobile-drop-icon"> ▾</span></a></li></div>
-            <div class="dropdown-content">
-              <a href="sightseeing.html">Sightseeing</a>
+        </div>
+    </div>
+    
+        <div class="menu-dropdown">
+<li onclick="toggleMenu()"><a>See & Do<span class="mobile-drop-icon"> ▾</span></a></li>
+            <div id="menu-dropdown-submenu">  
+                <a href="sightseeing.html">Sightseeing</a>
               <a href="culture.html">Culture/Museums</a>
               <a href="hiking.html">Nature/Hiking</a>
             </div>
           </div>
-        <div class="dropdown">
-            <div class="dropbtn"><li onclick="toggleMenu()"><a>Image Gallery<span class="mobile-drop-icon"> ▾</span></a></li></div>    
-            <div class="dropdown-content">
-              <a href="ronda-gallery.html">Ronda</a>
+        <div class="menu-dropdown">
+       <li onclick="toggleMenu()"><a>Image Gallery<span class="mobile-drop-icon"> ▾</span></a></li>    
+       <div  id="menu-dropdown-submenu">  
+        <a href="ronda-gallery.html">Ronda</a>
               <a href="serrania-gallery.html">Serrania</a>
               <a href="andalucia-gallery.html">Andalucía</a>
             </div>
           </div>
-          <div class="dropdown">
-            <div class="dropbtn"><li><a href="plan-your-trip.html">Plan Your Trip</a></li></div>
+          <div class="menu-dropdown">
+            <li><a href="plan-your-trip.html">Plan Your Trip</a></li>
           </div>
-          <div class="dropdown">
-            <div class="dropbtn"><li onclick="toggleMenu()"><a>About Us<span class="mobile-drop-icon"> ▾</div></a></li></button>
-            <div class="dropdown-content">
-             <!--<a href="sightseeing.html">Why We Made Discover Ronda</a>-->
-              <a href="who-we-are.html">Who We Are</a>
+          <div class="menu-dropdown">
+            <li onclick="toggleMenu()"><a>About Us<span class="mobile-drop-icon"> ▾</span></a></li>
+            <div  id="menu-dropdown-submenu">  
+                <a href="who-we-are.html">Who We Are</a>
               <a href="support-us.html">Support Us</a>
             </div>
           </div>
           <div class="instagram">
             <a href="https://www.instagram.com/discover.ronda/" target="_blank" i class="fa fa-instagram " aria-hidden="true"></a>
             </div>
-    </ul>
-
-
-
-
-
-
-    <div class="language">
+        </ul>
+<div class="language">
         <a href="es/index.html" target="" i class="" aria-hidden="true"><img src="images/spanish-language.png" width="25rem"></a>
         </div>
   </header>
@@ -104,7 +99,6 @@ menuBox.style.display = "block";
             </div>
         </div>
     </section>
-
     <div class = "container">
         <div id = "blog-text-box">
             <h3>Top Picks</h3>
