--- a/images/test/Ronda Tourism Website/ronda-gallery.html
+++ b/images/test/Ronda Tourism Website/ronda-gallery.html
@@ -2,8 +2,8 @@
     <head>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="css/stylesheet.css">
-  <!--    <link rel="stylesheet" href="css/layout.css">
-        <link rel="stylesheet" href="css/lightbox.min.css">-->
+  <link rel="stylesheet" href="css/layout.css">
+        <link rel="stylesheet" href="css/lightbox.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="icon" type="image/png" href="images/icon.png">
         <script src="js/lightbox-plus-jquery.min.js"></script>
