--- a/images/test/Ronda Tourism Website/support-us.html
+++ b/images/test/Ronda Tourism Website/support-us.html
@@ -106,10 +106,18 @@
       </div>
     </div>
 
+    <section id="image-2-boxes">
+        <div class="box">
+          <div class="image"><img src="./images/us.jpg" /></div>
+        </div>
+        <div class="box">
+          <div class="text">fgdfgdfg</div>
+      </div>
+    </section>
+
     <div id="text-box">
       <div class="small-container">
-        <div class="tenor-gif-embed" data-postid="5012582" data-share-method="host" data-width="100%" data-aspect-ratio="1.3555555555555556"><a href="https://tenor.com/view/chinesenewyear-gif-5012582">Money Please GIF</a> from <a href="https://tenor.com/search/chinesenewyear-gifs">Chinesenewyear GIFs</a></div><script type="text/javascript" async src="https://tenor.com/embed.js"></script>
-       <br><br> <form action="https://www.paypal.com/donate" method="post" target="_top">
+        <br><br> <form action="https://www.paypal.com/donate" method="post" target="_top">
             <input type="hidden" name="business" value="BCNJG3EEVZGUL" />
             <input type="hidden" name="currency_code" value="EUR" />
             <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
