--- a/images/test/Ronda Tourism Website/ronda-gallery.html
+++ b/images/test/Ronda Tourism Website/ronda-gallery.html
@@ -88,8 +88,13 @@
   </header>
 </div>
 
-  <div class="portfolio-container">
+<div class="gallery-menu">
+<a href="ronda-gallery.html">Ronda</a>
+<a href="serrania-gallery.html">Serrania</a>
+<a href="andalucia-gallery.html">Andalucía</a>
+</div>
 
+  <div class="portfolio-container">
 
       <div id="portfoliolist">
         <div class="portfolio ronda" data-cat="ronda">
