--- a/images/test/Ronda Tourism Website/style-guide.html
+++ b/images/test/Ronda Tourism Website/style-guide.html
@@ -110,7 +110,10 @@
     </div>
   </div>
 
-  
+  <div class="feature-container-large">
+    <div class="feature-item-large"><img src="./images/ronda/ronda_21.jpg"><div class="centered-text-large">Best Viewpoints in Ronda<hr></div></div>
+    </div>
+    
     <div id = "footer">
       <div id="footer-text">
           <p>Copyright &copy 2021 David Soanes<br>
