--- a/images/test/Ronda Tourism Website/index.html
+++ b/images/test/Ronda Tourism Website/index.html
@@ -197,10 +197,9 @@
       of time away from work were always the times I was looking forward to
       the most. They were like those treats for me for which I was always
       looking forward to and couldn’t wait to start. </p><br><br>
-      <button id="read-more">Read More</button>
+      <div class="feature-read-more"><a href=#>Read More</a></div>
   </div>
-  <div class="homepage-flex-item-right">    <img src="./images/my-story-2.jpg" />
-  </div>
+  <div class="homepage-flex-item-right"><img src="./images/ronda/ronda_1.jpg"/></div>
 </div>
 
 <div id = "quote">
