--- a/images/test/Ronda Tourism Website/support-us.html
+++ b/images/test/Ronda Tourism Website/support-us.html
@@ -90,7 +90,7 @@
 
     <div id="text-box">
       <div class="small-container">
-        <h2>Help Us Out:</h2>
+        <h2>Help Us Out</h2>
         <p>
           My favorite activity to look forward to is always when I can get on
           the train and go travelling - my holidays, weekends and every amount
@@ -106,12 +106,12 @@
       </div>
     </div>
 
-    <section id="image-2-boxes">
+    <section id="image-1-box">
         <div class="box">
           <div class="image"><img src="./images/us.jpg" /></div>
         </div>
         <div class="box">
-          <div class="text">fgdfgdfg</div>
+          <div class="text"></div>
       </div>
     </section>
 
