--- a/images/test/Ronda Tourism Website/index copy.html
+++ b/images/test/Ronda Tourism Website/index copy.html
@@ -14,29 +14,12 @@
         <title>Discover Ronda</title>
         <meta name="description" content="Discover Ronda - A place to discover Ronda.">
   </head>
-
- <!--  <script>
-        if (screen.width <= 1024)
-
-        function toggleMenu() {
-  var x = document.getElementById("menu-dropdown-submenu");
-  if (x.style.display === "block") {
-    x.style.display = "none";
-  } else {
-    x.style.display = "block";
-  }
-}
-   </script>-->
-
-<!--new header-->
-
 <div class="container">
 
 	<nav id="menu">
   <label for="tm" id="toggle-menu">Discover Ronda <span class="drop-icon">▾</span></label>
   <input type="checkbox" id="tm">
   <ul class="main-menu cf">
-    <li><a href="#">Sample</a></li>
     <li><a href="#">About Ronda
         <span class="drop-icon">▾</span>
         <label title="Toggle Drop-down" class="drop-icon" for="sm0">▾</label>
@@ -49,87 +32,39 @@
         <li><a href="regional-food.html">Regional Food</a></li>
       </ul>
     </li>
-    <li><a href="#">2-level DD 
-        <span class="drop-icon">▾</span>
-        <label title="Toggle Drop-down" class="drop-icon" for="sm1">▾</label>
-      </a>
-      <input type="checkbox" id="sm1">
-      <ul class="sub-menu">
-        <li><a href="#">Item 2.1</a></li>
-        <li><a href="#">Item 2.2
-            <span class="drop-icon">▸</span>
-            <label title="Toggle Drop-down" class="drop-icon" for="sm2">▾</label>
-          </a>
-          <input type="checkbox" id="sm2">
-          <ul class="sub-menu">
-            <li><a href="#">Item 2.2.1</a></li>
-            <li><a href="#">Item 2.2.2</a></li>
-            <li><a href="#">Item 2.2.3</a></li>
-          </ul>
-        </li>
-        <li><a href="#">Item 2.3</a></li>
-      </ul>
-    </li>
-    <li><a href="#">Multiple Levels
-        <span class="drop-icon">▾</span>
-        <label title="Toggle Drop-down" class="drop-icon" for="sm3">▾</label>
+    <li><a href="#">See & Do
+      <span class="drop-icon">▾</span>
+      <label title="Toggle Drop-down" class="drop-icon" for="sm1">▾</label>
     </a>
-    <input type="checkbox" id="sm3">
+    <input type="checkbox" id="sm1">
     <ul class="sub-menu">
-      <li><a href="">3.1
-        <span class="drop-icon">▸</span>
-        <label title="Toggle Drop-down" class="drop-icon" for="sm4">▾</label>
-      </a>
-      <input type="checkbox" id="sm4">
-        <ul class="sub-menu">
-          <li><a href="">3.1.1</a></li>
-          <li><a href="">3.1.2</a></li>
-          <li><a href="">3.1.3</a></li>
-          <li><a href="">3.1.4</a></li>
-        </ul>
-      </li>
-      <li><a href="">3.2
-        <span class="drop-icon">▸</span>
-        <label title="Toggle Drop-down" class="drop-icon" for="sm5">▾</label>
-      </a>
-      <input type="checkbox" id="sm5">
-      </a>
-        <ul class="sub-menu">
-          <li><a href="">3.2.1</a></li>
-          <li><a href="">3.2.2</a></li>
-          <li><a href="">3.2.3</a></li>
-        </ul>
-      </li>
-      <li><a href="">3.3
-          <span class="drop-icon">▸</span>
-            <label title="Toggle Drop-down" class="drop-icon" for="sm6">▾</label>
-          </a>
-          <input type="checkbox" id="sm6">
-      </a>
-        <ul class="sub-menu">
-          <li><a href="">3.3.1</a></li>
-          <li><a href="">3.3.2</a></li>
-          <li><a href="">3.2.2</a></li>
-          <li><a href="">3.3.4</a></li>
-          <li><a href="">3.3.5</a></li>
-        </ul>
-      </li>
+      <li><a href="sightseeing.html">Sightseeing</a></li>
+      <li>  <a href="culture.html">Culture/Museums</a></li>
+      <li>  <a href="hiking.html">Nature/Hiking</a></li>
     </ul>
-    </li>
-    <li><a href="#">Sample #2</a></li>
-    <li><a href="#">Another DD
-          <span class="drop-icon">▾</span>
-            <label title="Toggle Drop-down" class="drop-icon" for="sm8">▾</label>
-          </a>
-          <input type="checkbox" id="sm8">
-        </a>
-        <ul class="sub-menu">
-          <li><a href="">4.1</a></li>
-          <li><a href="">4.2</a></li>
-          <li><a href="">4.2</a></li>
-          <li><a href="">4.4</a></li>
-        </ul>    
-    </li>
+  </li>
+  <li><a href="#">Image Gallery
+    <span class="drop-icon">▾</span>
+    <label title="Toggle Drop-down" class="drop-icon" for="sm2">▾</label>
+  </a>
+  <input type="checkbox" id="sm2">
+  <ul class="sub-menu">
+    <li>  <a href="ronda-gallery.html">Ronda</a></li>
+    <li> <a href="serrania-gallery.html">Serrania</a></li>
+    <li> <a href="andalucia-gallery.html">Andalucía</a></li>
+  </ul>
+</li>
+<li><a href="plan-your-trip.html">Plan Your Trip</a></li>
+<li><a href="#">About Us
+  <span class="drop-icon">▾</span>
+  <label title="Toggle Drop-down" class="drop-icon" for="sm3">▾</label>
+</a>
+<input type="checkbox" id="sm3">
+<ul class="sub-menu">
+  <li> <a href="who-we-are.html">Who We Are</a></li>
+  <li> <a href="support-us.html">Support Us</a></li>
+</ul>
+</li>
   </ul>
 </nav>	        
 
@@ -156,62 +91,19 @@ prettyPrint()
 
 
 
-
-
 <!--
-
-    <header class="header">
-      <input class="menu-btn" type="checkbox" id="menu-btn" />
-      <label class="menu-icon" for="menu-btn">
-        <span class="navicon"></span>
-      </label>
-     <a href="index.html" class="logo"><img src="./images/logo.jpg">Discover Ronda</a>-->
-    <!--  <ul class="menu"> 
-        <div class="menu-dropdown">
-            <li><a>About Ronda<span class="mobile-drop-icon"> ▾</span></a></li>
-            <div  id="menu-dropdown-submenu">  
-                <a href="history.html">History</a>
-                <a href="ronda-today.html">Ronda Today</a>
-                <a href="famous-people.html">Famous People</a>
-                <a href="regional-food.html">Regional Food</a>
-            </div>
-        </div>
-    
-        <div class="menu-dropdown">
-<li><a>See & Do<span class="mobile-drop-icon"> ▾</span></a></li>
-            <div id="menu-dropdown-submenu">  
-                <a href="sightseeing.html">Sightseeing</a>
-              <a href="culture.html">Culture/Museums</a>
-              <a href="hiking.html">Nature/Hiking</a>
-            </div>
-          </div>
-
-        <div class="menu-dropdown">
-       <li><a>Image Gallery<span class="mobile-drop-icon"> ▾</span></a></li>    
-       <div  id="menu-dropdown-submenu">  
-        <a href="ronda-gallery.html">Ronda</a>
-              <a href="serrania-gallery.html">Serrania</a>
-              <a href="andalucia-gallery.html">Andalucía</a>
-            </div>
-          </div>
-          <div class="menu-dropdown">
-            <li><a href="plan-your-trip.html">Plan Your Trip</a></li>
-          </div>
-          <div class="menu-dropdown">
-            <li><a>About Us<span class="mobile-drop-icon"> ▾</span></a></li>
-            <div  id="menu-dropdown-submenu">  
-                <a href="who-we-are.html">Who We Are</a>
-              <a href="support-us.html">Support Us</a>
-            </div>
-          </div> -->
-          <!--
-          <div class="instagram">
-            <a href="https://www.instagram.com/discover.ronda/" target="_blank" i class="fa fa-instagram " aria-hidden="true"></a>
-            </div>
-        </ul>
+<div class="instagram">
+  <a href="https://www.instagram.com/discover.ronda/" target="_blank" i class="fa fa-instagram " aria-hidden="true"></a>
+  </div>
+</ul>
 <div class="language">
-        <a href="es/index.html" target="" i class="" aria-hidden="true"><img src="images/spanish-language.png" width="25rem"></a>
-        </div>-->
+<a href="es/index.html" target="" i class="" aria-hidden="true"><img src="images/spanish-language.png" width="25rem"></a>
+</div>
+<li><a href="index.html" class="logo"><img src="./images/logo.jpg">Discover Ronda</a></li>
+-->
+
+
+
   <!--</header>
 </div>
 -->
